--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "axios": "^0.19.0",
+    "materialize-css": "^1.0.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-moment": "^0.9.2",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.3"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "typescript": "3.6.3",
+    "use-debounce": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,5 +39,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/jest": "24.0.18",
+    "@types/materialize-css": "^1.0.6",
+    "@types/node": "12.7.5",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "concurrently": "^4.1.2",
+    "json-server": "^0.15.1"
+  },
+  "proxy": "http://localhost:5000"
 }
